# hoop-sim

./: .gitignore  LICENSE.md  README.md  pyproject.toml  render.yaml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  theme.tsx  ui.tsx
hoopr/: __init__.py  __main__.py  app.py  config.py
hoopr/data/: college_names.json  colleges.json  names.json  teams.json
hoopr/models/: __init__.py  attributes.py  contract.py  draft.py  league.py  player.py  stats.py  tactics.py  team.py  world.py
hoopr/save/: __init__.py  serialize.py  store.py
hoopr/sim/: __init__.py  boxscore.py  coach.py  college_tourney.py  engine.py  playoffs.py  ratings.py  season.py
hoopr/systems/: __init__.py  awards.py  cap.py  college_offseason.py  collegefin.py  development.py  draft_system.py  freeagency.py  offseason.py  recruiting.py  trades.py
hoopr/ui/: __init__.py  app_ui.py  college_ui.py  console.py  theme.py  widgets.py
hoopr/web/: README.md  app.py  serializers.py  session.py
hoopsim/: __init__.py  __main__.py  app.py  config.py  rng.py
hoopsim/models/: __init__.py  attributes.py  coach.py  league.py  player.py  tactics.py  team.py  world.py
hoopsim/save/: __init__.py  serialize.py  store.py
hoopsim/sim/: __init__.py  boxscore.py  coach.py  college_tourney.py  engine.py  playoffs.py  power.py  ratings.py  season.py
hoopsim/systems/: __init__.py  awards.py  cap.py  (+11 more)
tests/: __init__.py  test_awards.py  test_backstory.py  test_cap.py  test_chemistry.py  test_coach.py  test_coach_archetypes.py  test_college.py  test_deadcap.py  test_draft_class.py  test_engine.py  test_freeagency_offers.py  test_generation.py  test_legacy.py  test_momentum.py  test_offseason.py  test_pick_shopping.py  test_power.py  test_prospect_stats.py  test_rare_archetypes.py  test_realization.py  test_retention.py  test_roles.py  test_rotation.py  test_save.py  test_scouting_fog.py  test_season.py  test_team_strength.py  test_tiered_signing.py  test_web.py
tools/: gen_names.py
(+86 files in other folders)
