[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hoopr"
version = "0.1.0"
description = "A text-based Football-Manager-style basketball management simulation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.24"]
web = ["fastapi>=0.104", "uvicorn[standard]>=0.24"]

[project.scripts]
hoopr = "hoopr.app:run"
hoopr-web = "hoopr.web.app:run"

[tool.setuptools.packages.find]
include = ["hoopr*"]

[tool.setuptools.package-data]
"hoopr.web" = ["static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
